--- a/mystyle.css
+++ b/mystyle.css
@@ -6,3 +6,6 @@ p.sample1 {border:double 10px #0000ff;}
 p.sample2 {border:inset 10px #ff0000;}
 p.sample3 {margin:30px 30px;padding: 10px;border:medium solid #ff00ff;}
 
+body {background-color: #ffe4e1;}
+article {background-color: #ffe4b5;}
+h1 {background-color:  #90ee90;}
